objects/FLODocs__OAuth2_Resource_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>FLODocs__API_Endpoint__c</fullName>
        <description>Base URL for the API.</description>
        <inlineHelpText>Base URL for the API.</inlineHelpText>
        <label>API Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Access_Token_URL__c</fullName>
        <description>Authorization Server URL for the Access Token request.</description>
        <inlineHelpText>Authorization Server URL for the Access Token request.</inlineHelpText>
        <label>Access Token URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__AuthProvider_Plugin_Class__c</fullName>
        <description>Custom AuthProvider class</description>
        <inlineHelpText>Custom AuthProvider class</inlineHelpText>
        <label>AuthProvider Plugin Class</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Authorization_URL__c</fullName>
        <description>Resource URL for the OAuth2 Authorization Request (code).</description>
        <inlineHelpText>Resource URL for the OAuth2 Authorization Request (code).</inlineHelpText>
        <label>Authorization URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Service_Class__c</fullName>
        <description>Concrete Data Service class name.</description>
        <inlineHelpText>Concrete Data Service class name.</inlineHelpText>
        <label>Data Service Class</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Default_Scope__c</fullName>
        <description>Default scope of the OAuth2 granted credential.</description>
        <inlineHelpText>Default scope of the OAuth2 granted credential.</inlineHelpText>
        <label>Default Scope</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__RemoteSiteSetting_URL__c</fullName>
        <description>Base URL for the OAuth2 Authorization and Access Token requests.</description>
        <inlineHelpText>Base URL for the OAuth2 Authorization and Access Token requests.</inlineHelpText>
        <label>Remote Site Setting URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Resource_Class__c</fullName>
        <description>Designates the class of OAuth2 resource. 
Git =&gt; various Git-based version control services (eg, GitHub, GitLab, Bitbucket)
Salesforce =&gt; Salesforce</description>
        <inlineHelpText>Designates the class of OAuth2 resource. 
Git =&gt; various Git-based version control services (eg, GitHub, GitLab, Bitbucket)
Salesforce =&gt; Salesforce</inlineHelpText>
        <label>Resource Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Git</fullName>
                    <default>true</default>
                    <label>Git</label>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OAuth2 Resource Type</label>
    <pluralLabel>OAuth2 Resource Types</pluralLabel>
</CustomObject>